# torch-python-cpp

./: .gitignore  CMakeLists.txt  README.md  example-app.cpp  t1.py
cifar/: .Net.py.swp  .train.py.swp  CMakeLists.txt  Net.py  convert2script.py  main.cpp  test.py  train.py
